// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Alert Render & Snapshot with title only 1`] = `
<View
  style={
    {
      "flex": 1,
    }
  }
>
  <Modal
    animationType="fade"
    statusBarTranslucent={true}
    transparent={true}
    visible={true}
  >
    <View
      style={
        {
          "flex": 1,
        }
      }
    >
      <View
        accessible={true}
        role="group"
        style={
          [
            {
              "alignItems": "center",
              "backgroundColor": "#00050180",
              "justifyContent": "center",
            },
            {
              "bottom": 0,
              "left": 0,
              "position": "absolute",
              "right": 0,
              "top": 0,
            },
          ]
        }
      >
        <View
          accessibilityState={
            {
              "busy": undefined,
              "checked": undefined,
              "disabled": false,
              "expanded": undefined,
              "selected": undefined,
            }
          }
          accessibilityValue={
            {
              "max": undefined,
              "min": undefined,
              "now": undefined,
              "text": undefined,
            }
          }
          accessible={true}
          collapsable={false}
          focusable={true}
          onBlur={[Function]}
          onClick={[Function]}
          onFocus={[Function]}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderRelease={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
          style={
            [
              {},
              {
                "bottom": 0,
                "left": 0,
                "position": "absolute",
                "right": 0,
                "top": 0,
              },
            ]
          }
        />
        <View
          accessible={true}
          collapsable={false}
          jestAnimatedProps={
            {
              "value": {},
            }
          }
          jestAnimatedStyle={
            {
              "value": {
                "transform": [
                  {
                    "scale": 0,
                  },
                ],
              },
            }
          }
          jestInlineStyle={{}}
          nativeID="0"
          role="group"
          style={
            [
              {
                "backgroundColor": "#fafafa",
                "gap": 16,
                "padding": 26,
                "width": "80%",
              },
              [
                {
                  "transform": [
                    {
                      "scale": 0,
                    },
                  ],
                },
              ],
            ]
          }
        >
          <Text
            style={
              [
                {
                  "color": "#000501",
                  "fontSize": 20,
                  "fontWeight": "bold",
                  "lineHeight": 24,
                  "textAlign": "center",
                },
              ]
            }
          >
            Alert Title
          </Text>
          <View
            accessible={true}
            role="group"
            style={
              [
                {
                  "backgroundColor": "#fafafa",
                  "gap": 10,
                  "marginTop": 16,
                },
              ]
            }
          >
            <View
              accessible={true}
              role="group"
              style={
                [
                  {
                    "backgroundColor": "#fafafa",
                    "flexDirection": "row",
                    "gap": 10,
                  },
                ]
              }
            >
              <View
                accessibilityState={
                  {
                    "busy": undefined,
                    "checked": undefined,
                    "disabled": undefined,
                    "expanded": undefined,
                    "selected": undefined,
                  }
                }
                accessibilityValue={
                  {
                    "max": undefined,
                    "min": undefined,
                    "now": undefined,
                    "text": undefined,
                  }
                }
                accessible={true}
                collapsable={false}
                focusable={true}
                onBlur={[Function]}
                onClick={[Function]}
                onFocus={[Function]}
                onResponderGrant={[Function]}
                onResponderMove={[Function]}
                onResponderRelease={[Function]}
                onResponderTerminate={[Function]}
                onResponderTerminationRequest={[Function]}
                onStartShouldSetResponder={[Function]}
                style={
                  [
                    {
                      "transform": [
                        {
                          "scale": 1,
                        },
                      ],
                    },
                    [
                      {
                        "alignItems": "center",
                        "backgroundColor": "#7ccf6b",
                        "borderColor": "#7ccf6b",
                        "borderWidth": 1,
                        "flex": 1,
                        "flexDirection": "row",
                        "justifyContent": "center",
                        "paddingHorizontal": 16,
                        "paddingVertical": 10,
                      },
                    ],
                  ]
                }
              >
                <Text
                  numberOfLines={1}
                  style={
                    [
                      {
                        "color": "#fafafa",
                        "fontSize": 20,
                        "lineHeight": 24,
                      },
                    ]
                  }
                >
                  OK
                </Text>
              </View>
            </View>
          </View>
        </View>
      </View>
    </View>
  </Modal>
</View>
`;

exports[`Alert Render with title and description 1`] = `
<View
  style={
    {
      "flex": 1,
    }
  }
>
  <Modal
    animationType="fade"
    statusBarTranslucent={true}
    transparent={true}
    visible={true}
  >
    <View
      style={
        {
          "flex": 1,
        }
      }
    >
      <View
        accessible={true}
        role="group"
        style={
          [
            {
              "alignItems": "center",
              "backgroundColor": "#00050180",
              "justifyContent": "center",
            },
            {
              "bottom": 0,
              "left": 0,
              "position": "absolute",
              "right": 0,
              "top": 0,
            },
          ]
        }
      >
        <View
          accessibilityState={
            {
              "busy": undefined,
              "checked": undefined,
              "disabled": false,
              "expanded": undefined,
              "selected": undefined,
            }
          }
          accessibilityValue={
            {
              "max": undefined,
              "min": undefined,
              "now": undefined,
              "text": undefined,
            }
          }
          accessible={true}
          collapsable={false}
          focusable={true}
          onBlur={[Function]}
          onClick={[Function]}
          onFocus={[Function]}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderRelease={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
          style={
            [
              {},
              {
                "bottom": 0,
                "left": 0,
                "position": "absolute",
                "right": 0,
                "top": 0,
              },
            ]
          }
        />
        <View
          accessible={true}
          collapsable={false}
          jestAnimatedProps={
            {
              "value": {},
            }
          }
          jestAnimatedStyle={
            {
              "value": {
                "transform": [
                  {
                    "scale": 0,
                  },
                ],
              },
            }
          }
          jestInlineStyle={{}}
          nativeID="1"
          role="group"
          style={
            [
              {
                "backgroundColor": "#fafafa",
                "gap": 16,
                "padding": 26,
                "width": "80%",
              },
              [
                {
                  "transform": [
                    {
                      "scale": 0,
                    },
                  ],
                },
              ],
            ]
          }
        >
          <Text
            style={
              [
                {
                  "color": "#000501",
                  "fontSize": 20,
                  "fontWeight": "bold",
                  "lineHeight": 24,
                  "textAlign": "center",
                },
              ]
            }
          >
            Confirm
          </Text>
          <Text
            style={
              [
                {
                  "color": "#000501",
                  "fontSize": 16,
                  "lineHeight": 19.2,
                  "textAlign": "center",
                },
              ]
            }
          >
            Are you sure?
          </Text>
          <View
            accessible={true}
            role="group"
            style={
              [
                {
                  "backgroundColor": "#fafafa",
                  "gap": 10,
                  "marginTop": 16,
                },
              ]
            }
          >
            <View
              accessible={true}
              role="group"
              style={
                [
                  {
                    "backgroundColor": "#fafafa",
                    "flexDirection": "row",
                    "gap": 10,
                  },
                ]
              }
            >
              <View
                accessibilityState={
                  {
                    "busy": undefined,
                    "checked": undefined,
                    "disabled": undefined,
                    "expanded": undefined,
                    "selected": undefined,
                  }
                }
                accessibilityValue={
                  {
                    "max": undefined,
                    "min": undefined,
                    "now": undefined,
                    "text": undefined,
                  }
                }
                accessible={true}
                collapsable={false}
                focusable={true}
                onBlur={[Function]}
                onClick={[Function]}
                onFocus={[Function]}
                onResponderGrant={[Function]}
                onResponderMove={[Function]}
                onResponderRelease={[Function]}
                onResponderTerminate={[Function]}
                onResponderTerminationRequest={[Function]}
                onStartShouldSetResponder={[Function]}
                style={
                  [
                    {
                      "transform": [
                        {
                          "scale": 1,
                        },
                      ],
                    },
                    [
                      {
                        "alignItems": "center",
                        "backgroundColor": "#7ccf6b",
                        "borderColor": "#7ccf6b",
                        "borderWidth": 1,
                        "flex": 1,
                        "flexDirection": "row",
                        "justifyContent": "center",
                        "paddingHorizontal": 16,
                        "paddingVertical": 10,
                      },
                    ],
                  ]
                }
              >
                <Text
                  numberOfLines={1}
                  style={
                    [
                      {
                        "color": "#fafafa",
                        "fontSize": 20,
                        "lineHeight": 24,
                      },
                    ]
                  }
                >
                  OK
                </Text>
              </View>
            </View>
          </View>
        </View>
      </View>
    </View>
  </Modal>
</View>
`;
